# fishsense-core

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  release-please-config.json
.cargo/: config.toml
.github/workflows/: maturin.yml  python.yml  release-please.yml  rust.yml  update-readme-version.yml
fishsense_core/image/: image.py
python/fishsense_core/: CHANGELOG.md  Cargo.toml  main.py  pyproject.toml
python/fishsense_core/fishsense_core/: __init__.py  laser.py  world_point.py
python/fishsense_core/fishsense_core/fish/: __init__.py
python/fishsense_core/fishsense_core/image/: image.py  raw_image.py  rectified_image.py
python/fishsense_core/src/: laser.rs  lib.rs  world_point.rs
python/fishsense_core/src/fish/: fish_head_tail_detector.rs  fish_segmentation.rs  mod.rs
python/fishsense_core/tests/: test_native_bindings.py
python/fishsense_meta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust/fishsense-core/: CHANGELOG.md  Cargo.toml  build.rs
rust/fishsense-core/docs/: head_tail_orientation.md  segmentation_improvements.md
rust/fishsense-core/examples/: seg_debug.rs
rust/fishsense-core/src/: errors.rs  gpu.rs  lib.rs  world_point_handler.rs
rust/fishsense-core/src/fish/: fish_geometry.rs  fish_head_tail_detector.rs  fish_length_calculator.rs  fish_pca.rs  fish_peduncle.rs  fish_segmentation.rs  mod.rs
rust/fishsense-core/src/laser/: calibration.rs  mod.rs
rust/fishsense-core/src/spatial/: connected_components.rs  connected_components.wgsl  mod.rs  types.rs
rust/fishsense-core/tests/fixtures/bug_report/case_01/: coords.json
rust/fishsense-core/tests/fixtures/bug_report/case_150/: coords.json  mask.npy
rust/fishsense-core/tests/fixtures/bug_report/case_273/: coords.json  mask.npy
rust/fishsense-core/tests/fixtures/head_tail_concavity_swap/: mask.npy
rust/fishsense-core/tests/fixtures/head_tail_depth_collapse/case_01_catastrophic_zero/: depth_map.npy  mask.npy  metadata.json
rust/fishsense-core/tests/fixtures/head_tail_depth_collapse/case_02_catastrophic_2px_iphone/: depth_map.npy  mask.npy  metadata.json
rust/fishsense-core/tests/fixtures/head_tail_depth_collapse/case_03_catastrophic_2px_ipad/: depth_map.npy  mask.npy  metadata.json
rust/fishsense-core/tests/fixtures/head_tail_depth_collapse/case_04_well_behaved_baseline/: depth_map.npy  mask.npy  metadata.json
rust/fishsense-core/tests/fixtures/head_tail_overshoot/case_06_validation_rejects_helpful_snap/: depth_map.npy  mask.npy  metadata.json
rust/fishsense-core/tests/fixtures/head_tail_regression/: mask.npy
rust/fishsense-core/tests/fixtures/head_tail_snout_right/: mask.npy
tests/: test_image.py
