[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fishsense-meta"
version = "0.1.0"
description = "core of the FishSense Project"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

dependencies = [
  "fishsense-core",
]

[tool.setuptools.packages.find]
exclude = ["rust*", "target*"]

[tool.uv.workspace]
members = [
  "python/fishsense_core",
]

[tool.uv.sources]
fishsense-core = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
]
