[package]
name = "fishsense_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fishsense_core"
crate-type = ["cdylib"]

[dependencies]
fishsense-core = { version = "0.1.0", path = "../../rust/fishsense-core" }
ndarray = "0.17.1"
numpy = "0.27.1"
pyo3 = "0.27.0"
