[package]
name = "fishsense_core"
version = "1.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fishsense_core"
crate-type = ["cdylib"]

[dependencies]
fishsense-core = { path = "../../rust/fishsense-core" }
ndarray = "0.17.1"
numpy = "0.27.1"
pollster = "0.4"
pyo3 = "0.27.0"
pyo3-log = "0.13"
tracing-log = "0.2"
