[project]
name = "fishsense_core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fishsense-api-sdk",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "rawpy>=0.25.1",
    "scikit-image>=0.25.2",
]

[tool.uv.sources]
fishsense-api-sdk = { git = "https://github.com/UCSD-E4E/fishsense-api-sdk.git" }
