[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "fishsense_core._native"

[project]
name = "fishsense_core"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "fishsense-api-sdk",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "rawpy>=0.25.1",
    "scikit-image>=0.25.2",
]

[tool.uv.sources]
fishsense-api-sdk = { git = "https://github.com/UCSD-E4E/fishsense-api-sdk.git" }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pylint>=4.0.4",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]
