[package]
name = "fishsense-core"
version = "0.2.0"
edition = "2024"

[features]
tracing-init = ["dep:tracing-subscriber"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
geo = "0.29"
nalgebra = "0.33"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
thiserror = "2.0.17"
tracing = "0.1"
wgpu = "29.0.1"
