[package]
name = "fishsense-core"
version = "1.7.0"
edition = "2024"
build = "build.rs"

[features]
default = ["download-binaries"]
download-binaries = ["ort/download-binaries", "ort/tls-rustls"]
coreml = ["ort/coreml"]
tracing-init = ["dep:tracing-subscriber"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ndarray-npy = "0.10"
ndarray-stats = "0.7"
serde_json = "1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
geo = "0.29"
nalgebra = "0.33"
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
opencv = { version = "0.98", default-features = false, features = ["imgproc"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray"] }
thiserror = "2.0.17"
tracing = "0.1"
wgpu = "29.0.1"
